--- a/assets/css/com.css
+++ b/assets/css/com.css
@@ -272,3 +272,16 @@ tr {
       font-style: italic;
       text-shadow: #000000 0px 1px 0px;
     }
+    .iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
